Fix shadow on ie

--- a/scrumdo-web/media/css/home.css
+++ b/scrumdo-web/media/css/home.css
@@ -175,7 +175,7 @@
    -webkit-box-shadow: rgba(0,0,0,0.5) 1px 1px 3px;
    -moz-box-shadow: rgba(0,0,0,0.5) 1px 1px 3px;
    box-shadow: rgba(0,0,0,0.5) 1px 1px 3px;
-   text-shadow: rgba(0,0,0,1) 0px 0px 2px;
+   text-shadow: rgba(0, 0, 0, 1) 0px 2px 5px;
    color: #ffffff;
    
    font-weight: bold;
